--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,9 +6,7 @@
 }
 
 .default-layout {
-    width: 1200px;
     padding: 1em;
-    margin: auto;
 }
 
 .ant-list-pagination {
@@ -70,4 +68,18 @@
 
 .news-card__likes-display {
     cursor: default;
+}
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) { 
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .default-layout {
+        width: 1200px;
+        margin: auto;
+    }
 }
